# ntt-light-sculpture-app

./: .gitignore  .gitmodules  README.md  config.py  ntt-light-sculpture-app.code-workspace
app/: .gitignore  README.md  application.py  config.py  conftest.py  constants.py  converted_constants.py  pytest.ini  requirements.txt
app/Engine/: __init__.py
app/assets/uis/: create_new_project_dialog.ui  image_preview.ui  main_window.ui  opengl_setting.ui  project_widget.ui  recent_project_widget.ui  test_widget.ui
app/components/: openg_widget.py
app/components/customs/image_label/: image_label.py
app/components/customs/opengl_widget/: commands.py  opengl_widget.py
app/components/customs/tree_view/: tree_view.py
app/components/image_preview_widget/: commands.py  image_preview_viewmodel.py  image_preview_widget.py
app/components/new_project_dialog/: dialog.py  viewmodel.py
app/components/opengl_setting_widget/: __init__.py  commands.py  opengl_setting_viewmodel.py
app/components/project_widget/: project_widget.py  project_widget_view_model.py
app/components/recent_projects/: container.py  item.py
app/modules/dependency_injection/: __init__.py  decorators.py  helper.py
app/modules/event_system/: event_system.py
app/modules/history_manager/: __init__.py
app/specs/: current.txt
app/structs/: application.py  image_meta.py  opengl_setting.py  project.py  struct_base.py  version.py
app/tests/: test_simple_click.py
app/tests/modules/: test_dependency_injection.py
app/tests/modules/depedency_injection/: as_singleton.py  as_transition.py  test_dependency_injection.py
app/tests/modules/event_system/: test_event_system.py
app/tests/modules/history_manager/: test_history_manager.py
app/tests/windows/: actor.py  actors.py  assertions.py  helper.py  simulation.py  test_create_a_new_project.py  test_create_application_data_file.py  test_import_image_file.py  test_interact_with_image.py  test_interact_with_opengl_tab.py  test_open_application.py  test_open_application_with_error_data.py  test_open_application_without_app_data.py  test_open_application_without_existed_application_json.py  test_open_project.py  test_opengl_setting.py  test_opengl_testing.py  test_recent_projects_feature.py  test_start_window.py  test_wrong_application_json.py  utils.py
app/tests/windows/start_window/: test_create_app_data_folder.py  test_existed_app_folder.py  test_open_existed_app_folder_with_recent_projects.py  test_open_non_existed_project.py  test_start_window.py
app/uis/: main_window.ui  opengl_widget.ui  recent_project_widget.ui  recent_projects_container.ui  starting_window.ui
app/utils/application/: __init__.py
app/utils/config/: __init__.py
app/utils/images/: __init__.py
app/utils/logger/: __init__.py
app/views/: widget_view.py
app/windows/: main_window.py  main_window_viewmodel.py  starting_window.py
autogen/: README.md  conftest.py  main.py  requirements.txt
autogen/data/: __init__.py  self_define_type.py
autogen/parser/: argument.py  class_.py  function.py  method.py  parser.py  paser.py  py_argument.py  py_attribute.py  py_class.py  py_enum.py  py_function.py  py_method.py  py_struct.py  py_typedef.py
autogen/template/: binding.jinja
autogen/templates/: binding.j2  binding.jinja  pyi_binding.j2
autogen/tests/: test_e2e.py
autogen/tests/parser/: test_parser.py
autogen/tests/utils/: test_types.py
autogen/utils/: args.py  file.py  template.py  types.py
engine/: .gitignore  CMakeLists.txt  README.md  alias.h.in  bind.cpp
engine/cmake/: ntt-glmConfig.cmake  ntt-gtestConfig.cmake  ntt-openglConfig.cmake  pybind11Config.cmake
engine/include/engine/: application.h  engine.h  public.h
engine/include/engine/common/: annotate.h  assertion.h  common.h  define.h  macros.h
engine/include/engine/container/: container.h
engine/include/engine/logging/: logging.h  types.h
engine/include/engine/model/: body.h  face.h  model.h  node.h
engine/include/engine/renderer/: camera.h  position.h  program.h  renderer.h  texture.h
engine/include/engine/singletonManager/: singletonManager.h
engine/include/engine/utils/: math.h
engine/src/: application.cpp  engine.cpp
engine/src/logging/: logging.cpp  types.cpp
engine/src/model/: body.cpp  face.cpp  model.cpp
engine/src/renderer/: camera.cpp  position.cpp  program.cpp  renderer.cpp  shader.h  texture.cpp  textureShader.h
engine/src/singletonManager/: singletonManager.cpp
engine/src/utils/: math.cpp
engine/tests/: container_test.cpp  model_test.cpp  ntt_assertion.cpp  ntt_assertion.h  simple_test.cpp
ui/: .gitignore  package-lock.json  package.json  tsconfig.json  webpack.dev.config.js
ui/src/app/: index.ts  tsconfig.json
ui/src/assets/html/: index.html
ui/src/react/: index.tsx
